discussion/kv_engine/139132/139132_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42329: Updated revid macro's type to be congruent with the xattr.

The vattr returns revid as a string, but the macro was writing the value
numerically instead.  This fixes the newly introduced macro to be
the same type as the virtual attribute.

Change-Id: Iccfe5350348494f8373dac7a9a0ad48f881756e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Brett Lawson
Date: 2020-10-28 15:30:51.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-28 17:11:04.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5338/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_xattr.cc:2315:40: error: expected ";" after expression [clang-diagnostic-error]
    EXPECT_TRUE(tnx["CAS"].is_string())
                                       ^
                                       ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_xattr.cc:2316:44: error: expected ";" after expression [clang-diagnostic-error]
    EXPECT_TRUE(tnx["exptime"].is_number())
                                           ^
                                           ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_xattr.cc:2317:42: error: expected ";" after expression [clang-diagnostic-error]
    EXPECT_TRUE(tnx["revid"].is_string())
                                         ^
                                         ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5338/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_xattr.cc:2315:40:
error: expected ";" after expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5338/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27135/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/tests/testapp/testapp_xattr.cc:2315:40:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27135/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31425/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_xattr.cc(2316): error C2143: syntax error: missing ";" before "switch" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31425/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6979/ : FAILURE

Compile error at [2020-10-28T17:08:11.409Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2315:40:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6979/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14615/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6688/ : FAILURE

Compile error at [2020-10-28T17:05:32.483Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2316:5:
error: expected ?;? before ?switch?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6688/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5756/ : FAILURE

Compile error at [2020-10-28T15:37:58.654Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2315:40:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6814/ : FAILURE

Compile error at [2020-10-28T17:08:55.155Z] ../kv_engine/tests/testapp/testapp_xattr.cc:2316:5:
error: expected ?;? before ?switch?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6814/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3867/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
